Bug 692364 - Incorrect color in background
Summary: Incorrect color in background
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: PC Linux
: P1 blocker
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-21 09:07 UTC by Chris Liddell (chrisl)
Modified: 2011-09-07 06:15 UTC (History)
0 users

See Also:
Customer: 850
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Liddell (chrisl) 2011-07-21 09:07:18 UTC
Reported by the customer:

If ps-files (e.g. 'GW.ps') are rendered into CIELAB colorspace background
is red. I used the following command-line:
     gswin32c.exe  -P- -dBATCH -dNOPAUSE -Z: -sOutputICCProfile=lab.icc
     -r100x100 -sOUTPUTFILE=output.tif -sDEVICE=tiff24nc -dDEVICEWIDTH=2000
     -dDEVICEHEIGHT=3000
     -sICCProfilesDir=C:\Projekte\SVN\Colorasko\trunk\bin\gs_artifex\iccprofiles\
 -c (GW.ps) run

If additionally DefaultGrayProfile is set, the output is correct:
     gswin32c.exe  -P- -dBATCH -dNOPAUSE -Z:
     -sDefaultGrayProfile=default_gray.icc -sOutputICCProfile=lab.icc
     -r100x100 -sOUTPUTFILE=output.tif -sDEVICE=tiff24nc -dDEVICEWIDTH=2000
     -dDEVICEHEIGHT=3000
     -sICCProfilesDir=C:\Projekte\SVN\Colorasko\trunk\bin\gs_artifex\iccprofiles\
 -c (GW.ps) run

Probably the initialisation of the gray-ICC-profile is not correct?


I can't test this as none of my tiff readers will actually read the output, so worth double checking with the latest master code.
Comment 2 Chris Liddell (chrisl) 2011-07-21 09:08:57 UTC
P2 as it's a customer issue.
Comment 3 Chris Liddell (chrisl) 2011-07-21 09:23:36 UTC
Original report in e-mail subject "Re: Open issues for 9.03" on July 21 2011.
Comment 4 Michael Vrhel 2011-07-21 16:16:03 UTC
Updating this to P1 blocker since this has to be addressed before 9.04 release.
Comment 5 Michael Vrhel 2011-07-21 18:37:21 UTC
I have a fix for this and I am testing now.  It is due to the DeviceGray color spaces that are used to initialize the graphic state.  These are used during the fill page operation and so we end up using the old color mapping procs to go to RGB value of 255 255 255 which is a very bright red as a CIELAB value.    The fix is to make sure that any remaps in DeviceGray force a proper install and conversion of the color space to an ICC gray type which then enables the use of a proper color conversion to the device values.